# Definitie-app-zakelijk

./: .coverage  .env  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  0  ACTIVE.md  ACTUAL_SOLUTION_PLAN.md  AGENTS.md  AI_REVIEW_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  Browser Test Checklist.docx  Browser Test Checklist.html  CHANGELOG.md  CLAUDE.md  CODEBASE_CLEANUP_STATUS.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  COMPLEXITY_ANALYSIS_REPORT.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_RESULT.md  DATA_INTEGRITY_FIX_SUMMARY.md  DOCUMENTATIE_REORGANISATIE_PLAN.md  DOD.md  DUPLICATION_ANALYSIS_REPORT.md  EA_SA_ANALYSIS_WORKFLOW.md  EA_SA_ENTERPRISE_ANALYSIS_REPORT.md  HISTORY_TAB_REMOVAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LEGACY_FEATURE_PRIORITY_LIST.md  LEGACY_REMOVAL_PLAN.md  MASTER-TODO.md  MIGRATION_PR_SUMMARY.md  Makefile  ONTBREKENDE-FUNCTIONALITEITEN.md  ONTOLOGICAL_CLASSIFIER_DELIVERABLE.md  ONTOLOGY_CLASSIFICATION_IMPLEMENTATION_SUMMARY.md  PARALLEL_VOORBEELDEN_IMPLEMENTATION.md  PERFORMANCE_FIXES_SUMMARY.md  (+69 more)
.ai/: debug-log.md
.bmad/: README.md  agent-fix-instructions.md  review-output.txt
.bmad-core/: init.sh  install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: commands  handover-god-class-refactoring.md  hookify.backwards-compat.local.md  hookify.context-names.local.md  hookify.database-location.local.md  hookify.file-location.local.md  hookify.forbidden-class-names.local.md  hookify.large-change-warning.local.md  hookify.no-root-files.local.md  hookify.prompt-first-workflow.local.md  hookify.silent-exception.local.md  project-areas.yaml
.cursor/: mcp.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.tmp_test_dbs/: definities_1636c7171b3d472b94de31d9baa0a56c.sqlite  definities_1cc4db075f8f48ca9015f985bbfcb7c3.sqlite  definities_4a101fda8c8f4937ba23184307b10fa4.sqlite  definities_66bd82f756404849b3230213554d13a7.sqlite  definities_7bc40a15a1d1453290a21111e0713445.sqlite  definities_80ec71fe9c454254be5a66836abd1747.sqlite  definities_895e6b5dc46243089427d1c68cfa2933.sqlite  definities_abbb76ad349443068a71b873a090fdec.sqlite  definities_f4726ac746cc440f942cea278d82895d.sqlite
.trunk/: trunk.yaml
Browser Test Checklist.fld/: filelist.xml
REBUILD_PACKAGE/: ARCHITECTURE_CONSISTENCY_REPORT.md  CRITICAL_GAPS_REPORT.md  GAPS_EXECUTIVE_SUMMARY.md  GAPS_INDEX.md  GETTING_STARTED.md  PACKAGE_MANIFEST.md  PREPARATION_CHECKLIST.md  README.md  docker-compose.yml
Vibe coding  prompt voorbeelden/: Vibe_Coding_Codex_H1-H4_Boekversie.md
ai_code_reviewer_package/: BUILD.md  CHANGELOG.md  DISTRIBUTION.md  INSTALL.md  MANIFEST.in  Makefile  QUICKSTART_WETSANALYSE.md  README.md  USAGE.md  USAGE_GUIDE.md  distribute.sh  pyproject.toml  quick-update.sh  review_report.md  setup-private-pypi.md  setup.py  update-ai-reviewer.sh  validate_package.py
ai_code_reviewer_package/.bmad/: review-output.txt
ai_code_reviewer_package/ai_code_reviewer/: __init__.py  cli.py  core.py  templates.py  updater.py
ai_code_reviewer_package/ai_code_reviewer/templates/: config-template.yaml
ai_code_reviewer_package/test-ai-review/: .ai-review-config.yaml  .pre-commit-config.yaml  pyproject.toml
backup_merge_conflicts/: MERGE_CONFLICTS_OVERVIEW.md
config/: .coveragerc  __init__.py  approval_gate.yaml  cache_config.yaml  config.yaml  config_default.yaml  config_default.yaml.old  config_development.yaml  config_loader.py  config_production.yaml  config_testing.yaml  juridische_keywords.yaml  juridische_synoniemen.yaml  logging_config.yaml  logging_structured.yaml  monitoring.yaml  openai_config.yaml  pytest.ini  synonym_config.yaml  toetsregels.json  ufo_rules.yaml  ufo_rules_v5.yaml  verboden_woorden.json  web_lookup_defaults.yaml  web_lookup_development.yaml
data/: definities.db  definities.db.backup_20250922_215538  definities.db.backup_20250923_130003  definities.db.backup_20250923_134451  definities.db.old  dev_definities.db  production_definities.db  test.db  test_terms.csv  wikipedia_synonym_candidates.csv
demo_project/: review_report.md
deprecated/: README.md
docs/: ADOPTING.md  AGENTS.md  BACKLOG.md  CANONICAL_LOCATIONS.md  CFR-DOCUMENTATION-VALIDATION-REPORT.md  CFR-IMMEDIATE-WORKAROUNDS.md  CLAUDE.md  CLEANUP-REPORT.md  CLEANUP-REPORT.md.normbackup  CODE_REVIEW_PROTOCOL.md  COMPLIANCE-DASHBOARD.md  COMPLIANCE-DASHBOARD.md.normbackup  CRITICAL_TEST_IMPLEMENTATION_PLAN.md  CRITICAL_TEST_IMPLEMENTATION_PLAN.md.normbackup  CURRENT_ARCHITECTURE_OVERVIEW.md  DOCS_CLEANUP_ANALYSIS.md  (+103 more)
(+5441 files in other folders)
